# meson-template

./: .gitignore  README.md  compile_run.sh  conanfile.txt  main.cpp  meson.build  setup.sh
